--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
 PORT=
-MONGO_URI=mongodb+srv://b10901037:<Aa13991399>@wploretta.plppadr.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://b10901037:<Aa13991399>@wploretta.plppadr.mongodb.net/?retryWrites=true&w=majority
